# python-candlestick-data-downloader

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1
src/: __init__.py  candlestick_downloader.py
tests/: test_candlestick_downloader.py
