[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candlestick-downloader"
version = "1.0.0"
description = "A robust Python package for downloading candlestick (OHLCV) data from Yahoo Finance"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["candlestick", "ohlcv", "yahoo finance", "trading", "stocks", "cryptocurrency", "forex"]
authors = [
    {name = "Naveen Sanjula", email = "naveensanjula975@gmail.com"}
]
maintainers = [
    {name = "Naveen Sanjula", email = "naveensanjula975@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "yfinance>=0.2.28",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "isort>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/naveensanjula975/python-candlestick-data-downloader"
Documentation = "https://github.com/naveensanjula975/python-candlestick-data-downloader#readme"
Repository = "https://github.com/naveensanjula975/python-candlestick-data-downloader"
"Bug Tracker" = "https://github.com/naveensanjula975/python-candlestick-data-downloader/issues"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
